modified the sizing of components based on the base font-size (12px now) fixed the gallery layout problems

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,45 +5,51 @@
   --bs-link-color-rgb: 255, 255, 255 !important;
   --bs-link-hover-color-rgb: 196, 61, 137 !important;
   --bs-gutter-x: 1rem !important;
+  font-size: 12px;
 }
 body {
+  // --bs-body-font-size: 12px;
 }
 .pink-color {
   color: #c44188;
 }
 p {
-  font-size: 1.25rem;
+  font-size: 2rem;
   font-family: bc-novatica-cyr, sans-serif;
   margin-bottom: 0 !important;
+  line-height: 2.4rem;
 }
 h1 {
-  font-size: 2rem !important;
-  line-height: 2, 375rem;
+  font-size: 3rem !important;
+  line-height: 3.6rem;
   font-family: bc-novatica-cyr, sans-serif;
   margin-bottom: 0 !important;
 }
 h2 {
-  font-size: 4rem !important;
+  font-size: 5rem !important;
   font-weight: 400 !important;
-  line-height: 4, 8125rem;
+  line-height: 6rem;
   font-family: bc-novatica-cyr, sans-serif;
   margin-bottom: 0 !important;
 }
 a {
-  font-size: 1.25rem;
+  font-size: 2rem;
+  line-height: 2.4rem;
   font-family: bc-novatica-cyr, sans-serif;
   color: #000;
 }
 .small-text {
-  font-size: 0.625rem;
+  font-size: 1.5rem;
+  line-height: 1.8rem;
 }
 button {
   background-color: #131314;
-  font-size: 1.5rem !important;
+  font-size: 2rem !important;
   color: #fff;
   text-transform: uppercase !important;
   border: none;
-  padding: 0.5625rem 1rem;
+  padding: 0.5rem 1rem;
+  line-height: 2.4rem !important;
 }
 .header-text {
   font-size: 3rem;
@@ -61,10 +67,10 @@ nav {
   padding-bottom: 1rem;
   .nav-text {
     color: #c44188;
-    font-size: 3rem;
+    font-size: 4rem;
     text-transform: uppercase;
     font-weight: bold;
-    line-height: 3.625rem;
+    line-height: 4.8rem;
   }
 }
 
@@ -74,18 +80,18 @@ nav {
 .container-sm,
 .container-xl,
 .container-xxl {
-  padding-top: 4rem !important;
-  padding-bottom: 4rem !important;
+  padding-top: 5rem !important;
+  padding-bottom: 5rem !important;
 }
 
-@media (min-width: 1650px) {
+@media (min-width: 1680px) {
   .container,
   .container-lg,
   .container-md,
   .container-sm,
   .container-xl,
   .container-xxl {
-    max-width: 1648px !important;
+    max-width: 1650px !important;
   }
 }
 
@@ -108,7 +114,7 @@ nav {
 
 @media (max-width: 991px) {
   .hero.container {
-    max-height: calc(100% - 3.625rem - 2rem);
+    max-height: calc(100% - 4rem - 2rem); //4rem is font-size, 2rem is top and bottom paddings combined
     > .row {
       display: flex;
       flex-direction: column;
@@ -140,7 +146,7 @@ nav {
       }
 }
 .hero {
-  height: calc(100% - 3.625rem - 2rem);
+  height: calc(100% - 4rem - 2rem); //4rem is font-size, 2rem is top and bottom paddings combined
   position: relative;
   display: flex;
   align-items: center;
@@ -160,10 +166,11 @@ nav {
     display: flex;
     align-items: center;
     .hero-card {
-      padding: 1.75rem 2.25rem;
+      padding: 2rem 3rem;
       height: fit-content;
       flex: 1;
       background-color: var(--bs-body-bg);
+      gap: 1rem;
       h2 {
         text-transform: uppercase;
       }
@@ -172,9 +179,9 @@ nav {
 }
 .hero-bg {
   width: 100%;
-  height: calc(100% - 3.625rem - 2rem);
+  height: calc(100% - 4rem - 2rem); //4rem is font-size, 2rem is top and bottom paddings combined
   object-fit: cover;
-  filter: blur(1.5px);
+  filter: blur(1.25px);
   opacity: 80%;
   position: absolute;
 }
@@ -183,10 +190,13 @@ nav {
   h1 {
     text-align: center;
   }
+  .about-me-left > div{
+    gap: 2rem;
+  }
   .about-me-left > div > div {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 1rem;
   }
   .about-me-left > div > div a {
     margin-right: 1rem;
@@ -196,6 +206,7 @@ nav {
     position: relative;
     height: fit-content;
     .gallery-preview-bg {
+      // display: none;
       position: absolute;
       width: 100%;
       height: 100%;
@@ -203,7 +214,7 @@ nav {
       opacity: 20%;
     }
     .gallery-button-container {
-      backdrop-filter: blur(1.5px);
+      backdrop-filter: blur(1.25px);
       position: absolute;
       width: 100%;
       height: 100%;
@@ -214,8 +225,12 @@ nav {
         transform: translate(-50%, -50%);
       }
     }
+    .hstack{
+      width: calc(100% - 2rem);
+    }
     img {
-      width: 100%;
+      // width: calc(100% / 3 - 1rem / 3);
+      width: calc(100% / 3);
       aspect-ratio: 1/1;
       object-fit: cover;
     }
